--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "mongodb": "^6.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "validator": "^13.15.15"
   },
   "name": "server",
   "version": "1.0.0",
